--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-tensorflow==2.13.0
-opencv-python==4.8.1.78
-numpy==1.24.3
-matplotlib==3.7.2
-scikit-learn==1.3.0
-Pillow==10.0.0
+tensorflow
+opencv-python
+numpy
+matplotlib
+scikit-learn
+Pillow
+seaborn
