--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /__pycache__
 /datasets
-/exported_models
+/exported_models/*
+!exported_models/benchmark.py
 /models/__pycache__
 /utils/__pycache__
-/not_ready
