--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-tensorflow
-opencv-python
-numpy
-matplotlib
-scikit-learn
-Pillow
-seaborn
+tensorflow==2.20.0
+numpy==2.3.3
+scikit-learn==1.7.2
+matplotlib==3.10.7
+seaborn==0.13.2
+tqdm==4.67.1
+absl-py
+opencv-python # for cv2
