exported_models\10cls_GRAY

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /datasets/*
 !/datasets/Tenth-of-step-of-a-meter-digit
 /exported_models/*
+!exported_models/10cls_GRAY
 /models/__pycache__
 /utils/__pycache__
 /training/__pycache__
