--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,62 @@
-tensorflow==2.15.0
-tensorflow-model-optimization==0.7.5
-tf-keras==2.15.1
-opencv-python==4.9.0.80
-numpy==1.26.4
-Pillow==10.2.0
-matplotlib==3.8.3
-tqdm==4.66.2
-scikit-learn==1.4.1.post1
+absl-py==1.4.0
+astunparse==1.6.3
+attrs==25.4.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
+colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
+dm-tree==0.1.9
+flatbuffers==25.9.23
+fonttools==4.60.1
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.76.0
+h5py==3.15.1
+idna==3.11
+joblib==1.5.2
+keras==3.11.3
 keras-tuner==1.4.7
-onnx
-tf2onnx
-onnxruntime
-tensorflow-model-optimization
+kiwisolver==1.4.9
+kt-legacy==1.0.5
+libclang==18.1.1
+Markdown==3.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mdurl==0.1.2
+ml-dtypes==0.3.2
+namex==0.1.0
+numpy==1.26.4
+opt_einsum==3.4.0
+optree==0.17.0
+packaging==25.0
+pandas==2.3.3
+pillow==12.0.0
+protobuf==4.25.8
+Pygments==2.19.2
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.5
+rich==14.2.0
+scikit-learn==1.7.2
+scipy==1.16.2
+seaborn==0.13.2
+setuptools==80.9.0
+six==1.17.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.2
+tensorflow-intel==2.16.2
+tensorflow-model-optimization==0.8.0
+termcolor==3.2.0
+tf_keras==2.20.1
+threadpoolctl==3.6.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==2.0.0
