--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ grpcio==1.76.0
 h5py==3.15.1
 idna==3.11
 joblib==1.5.2
-keras==3.11.3
+keras==3.12.0
 keras-tuner==1.4.7
 kiwisolver==1.4.9
 kt-legacy==1.0.5
@@ -23,37 +23,36 @@ libclang==18.1.1
 Markdown==3.9
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
-matplotlib==3.10.7
+matplotlib==3.8.4
 mdurl==0.1.2
-ml-dtypes==0.3.2
+ml_dtypes==0.5.3
 namex==0.1.0
 numpy==1.26.4
+opencv-python==4.10.0.84
 opt_einsum==3.4.0
 optree==0.17.0
 packaging==25.0
-pandas==2.3.3
-pillow==12.0.0
-protobuf==4.25.8
+pandas==2.2.2
+pillow==10.4.0
+protobuf==6.33.0
 Pygments==2.19.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.5
 rich==14.2.0
-scikit-learn==1.7.2
-scipy==1.16.2
+scikit-learn==1.4.2
+scipy==1.13.0
 seaborn==0.13.2
 setuptools==80.9.0
 six==1.17.0
-tensorboard==2.16.2
+tensorboard==2.20.0
 tensorboard-data-server==0.7.2
-tensorflow==2.16.2
-tensorflow-intel==2.16.2
+tensorflow==2.20.0
 tensorflow-model-optimization==0.8.0
 termcolor==3.2.0
-tf_keras==2.20.1
 threadpoolctl==3.6.0
-tqdm==4.67.1
+tqdm==4.66.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
