--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -4,6 +4,7 @@ torch==2.8.0
 keras==3.11.3
 tf_keras==2.20.1
 safetensors==0.4.2
+opencv-python-headless==4.10.0.84
 
 # Data processing & visualization
 numpy==1.26.4
