test super accuracy model

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ datasets/Tenth-of-step-of-a-meter-digit/commands.txt
 /datasets/tools/static_augmentation
 /venv_digreco
 train_old.py
+exported_models/100cls_RGB/super_high_accuracy_validator_100cls_RGB/super_high_accuracy_validator.keras
